--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -51,6 +51,9 @@
 }
 
 @media screen and (min-width: 700px) {
+.hero {
+    background-image: url(../public/images/resized/heros/hero-image_4-large.jpg) !important;
+  }
   #partners {
     display: grid;
     grid-template-columns: 1fr 1fr;
